# Kaamo

./: Makefile  README.md  pyproject.toml
docker/agent-base/: Dockerfile
docker/kaamo-daemon/: Dockerfile
docs/: architecture.md  cache-design.md  gemma3-integration.md  offline-setup.md  security-model.md
migrations/: 0001_core.sql
scripts/: install.sh  kaamo-daemon.service  uninstall.sh
src/kaamo/: __init__.py  audit.py  config.py  hardware.py  logging.py  ratelimit.py  secrets.py
src/kaamo/_native/: base.py  cache.py  kv_cache.py  seccomp.py  sha256.py
src/kaamo/blueteam/: __init__.py  base.py  service.py
src/kaamo/cache/: __init__.py  base.py  kv_cache.py  l0_kv.py  l1_response.py  metrics.py  pg_cache.py  redis_cache.py
src/kaamo/cli/: __init__.py  benchmark.py  chat.py  create.py  dashboard.py  db_migrate.py  list.py  logs.py  main.py  pull_model.py  remove.py  start.py  status.py  stop.py  token.py  verify_model.py
src/kaamo/daemon/: __init__.py  agent_manager.py  server.py  session_router.py
src/kaamo/db/: __init__.py  postgres.py  redis.py  repositories.py
src/kaamo/inference/: __init__.py  circuit_breaker.py  model_pool.py  queue.py  router.py
src/kaamo/models/: __init__.py  gemma_manager.py  hardware.py
src/kaamo/sandbox/: __init__.py  docker_client.py  network.py  seccomp.py
src/kaamo/security/: __init__.py  auth.py  validation_bridge.py
src/kaamo/tui/: __init__.py  alerts.py  app.py  attack_graph.py  cli.py  client.py  dashboard.py  findings.py  logs.py  (+2 more)
src/native/: CMakeLists.txt  cache.c  cache.h  kv_cache.c  kv_cache.h  seccomp_profile.c  sha256_verify.c  throttle.c  throttle.h
tests/blueteam/: test_anomaly.py  test_event_ingest.py  test_forensics.py  test_playbooks.py  test_rules_engine.py  test_validation_bridge.py
tests/integration/: test_offline_e2e.py  test_sandbox_escape.py
tests/load/: locustfile.py
tests/unit/: test_cache_l0_kv.py  test_cache_l1_response.py  test_gemma_template.py  test_inference_router.py  test_model_verification.py
(+26 files in other folders)
